# paypunk

./: .gitignore  ADD_SYNC.md  AGENTS.md  CONTEXT.md  Cargo.toml  PLAN-SIGNER-STAGES.md  PLAN-SIGNER.md  PRD.md  PROBLEMS.md  PR_REVIEW.md  QR_EXPAND.md  QUICKSTART.md  README.md  REVIEW.md  SPEC-zcash-tui.md  SPEC.md  TASK.md  TECH_SPEC.md  TO_DO.md  TRANSACTION_BUILDER_PLAN.md  devenv.nix  kp  plan.md  pp  ralph.sh  start-ethereum.sh  start-zcash.sh  ui
.archive/: REFERENCE_API.md  TECH_SPEC.md
.github/workflows/: ci.yml
adr/: 001-ipc-auth-model.md
api/: Cargo.toml
api/src/: client.rs  functions.rs  lib.rs
bridge/: Cargo.toml
bridge/src/: bridge.html  lib.rs
chains/ethereum/: Cargo.toml
chains/ethereum/src/: address.rs
chains/zcash/: Cargo.toml
chains/zcash/examples/: send_sheilded_other.rs.bak  send_shielded.rs
chains/zcash/src/: address.rs  lib.rs  protocol.rs
cli/: Cargo.toml
cli/src/: main.rs
config/src/: lib.rs
docs/: ARCHITECTURE.md  BRIDGE.md  CONTEXT.md  SECURITY.md
docs/src/: ARCHITECTURE.md  CLI.md  CONTRIBUTING.md  README.md
docs/usecases/: README.md
done/: 01_step.md  05_step.md  06_step.md  08_step.md
ipc/: Cargo.toml
ipc/src/: lib.rs  messages.rs  receiver.rs  router.rs  sender.rs  server.rs  transport.rs
ipc/tests/: ipc_test.rs
keypunkd/: Cargo.toml  SPEC.md
keypunkd/src/: crypto.rs  dispatcher.rs  errors.rs  key.rs  keypunk.rs  keypunkd.rs  lib.rs  main.rs  messages.rs  protocol.rs  run.rs  seed_store.rs  services.rs  usecases.rs
keypunkd/tests/: generate_seed_test.rs
logo/: Cargo.toml
logo/src/: main.rs
paypunkd/: Cargo.toml
paypunkd/src/: config.rs  dispatcher.rs  lib.rs  main.rs  messages.rs  paypunk.rs  paypunkd.rs  protocol_registry.rs  protocol_service.rs  run.rs  services.rs  usecases.rs
paypunkd/src/database/: db.rs  encryption.rs  migration.rs  mod.rs  repository.rs
ping/: Cargo.toml
ping/src/: main.rs
project/: REVIEW.md  draft.md  ralph.md  ralph.sh
project/done/: 01_step.md  02_step.md  03_goal.md  03_step.md  04_step.md  05_goal.md  05_step.md  06_step.md  07_step.md  08_step.md  09_step.md  11_step.md  12_step.md  13_step.md  14_step.md
project/goals/: 01_goal.md  02_goal.md  04_goal.md
project/notes/: notes.md
project/todo/: 01_step.md  02_step.md  03_step.md  04_step.md  05_step.md  06_step.md  07_step.md  08_step.md  09_step.md  10_step.md  11_step.md  12_step.md
protocols/: README.md
protocols/ethereum/: Cargo.toml
protocols/ethereum/src/: address.rs  lib.rs  protocol.rs  rpc.rs
protocols/zcash/: Cargo.toml
protocols/zcash/src/: address.rs  lib.rs  lsp_client.rs  protocol.rs  repository.rs  scan_actor.rs  signer.rs  wallet_actor.rs  wallet_client.rs
scripts/: setup-test-wallet.sh  start-zcash.sh
scripts/tests/: test_balance.sh  test_transfer.sh
signer/: README.md  devenv.nix  index.html  package.json  plan.md  pnpm-lock.yaml  vite.config.ts
signer/.github/workflows/: release-android.yml
signer/src/: App.tsx  backend.ts  main.tsx  nav.tsx  qr-transport.ts
signer/src-tauri/: Cargo.toml  tauri.conf.json
signer/src-tauri/capabilities/: default.json
signer/src-tauri/src/: lib.rs  main.rs  signer.rs
signer/src/pages/: OnboardingPage.tsx  PreviewPage.tsx  RegistrationPage.tsx  ResultPage.tsx  ScanPage.tsx  SettingsPage.tsx  SigningPage.tsx
support/ethereum/: README.md
support/zcash/: Makefile  README.md  docker-compose.yml  zcash.sh
support/zcash/docker/block-miner/: Dockerfile  entrypoint.sh
support/zcash/docker/lightwalletd/: Dockerfile  entrypoint-lwd.sh
support/zcash/docker/setup/: Dockerfile  derive-keys.mjs  package.json  setup-init.sh
support/zcash/docker/zcashd/: zcash.conf
support/zcash/lightwalletd/: entrypoint.sh  zcash.conf
support/zcash/zcashd/: entrypoint.sh  zcash.conf
tests/: Cargo.toml
tests/tests/: integration_test.rs  pczt_test.rs
todo/: 02_step.md  03_step.md  04_step.md  07_step.md  goal.md
tools/derive-orchard/: Cargo.toml
tools/derive-orchard/src/: main.rs
tui/: Cargo.toml  DEPENDENCY_CONFLICT.md
tui/docs/usecases/: 01-setup.md  02-greeting.md  03-lock.md  04-home.md  05-assets.md  06-send.md  07-receive.md  08-settings.md  09-help.md  ISSUES.md  README.md
tui/src/: app.rs  lib.rs  main.rs  ui.rs
tui/src/api/: mock.rs  mod.rs  real.rs  types.rs
tui/src/components/: asset_item.rs  balance_item.rs  button.rs  dropdown_picker.rs  list.rs  mod.rs  text_field.rs  wallet_item.rs
tui/src/components/demo/: asset_list_demo.rs  button_demo.rs  dropdown_picker_demo.rs  feedback_demo.rs  list_demo.rs  mod.rs  password_demo.rs
tui/src/screens/: assets.rs  component_demo.rs  connect_signer.rs  greeting.rs  help.rs  history.rs  home.rs  lock.rs  mod.rs  receive.rs  send.rs  settings.rs  setup.rs  wallets.rs
types/: Cargo.toml
types/src/: caip.rs  lib.rs
zcash-support/docker/lightwalletd/: zcash-lwd.conf
zcash-support/docker/zcashd/: Dockerfile  entrypoint-zcashd.sh
