[workspace]
resolver = "2"
members = [
    "ipc",
    "types",
    "keypunkd",
    "paypunkd",
    "api",
    "cli",
    "tests",
    "protocols/zcash",
    "protocols/ethereum",
    "tui",
]

[workspace.package]
license = "AGPL-3.0-only"

[workspace.dependencies]
# Async / runtime
tokio = "1"
tactix = "1.0"

# Serialization
serde = "1"
postcard = "1"

# Crypto
x25519-dalek = "2"
blake2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
bip39 = "2"
bip32 = "0.5"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = "1"
k256 = "0.13"
sha3 = "0.10"
hex = "0.4"
secp256k1 = "0.29"

# Alloy (Ethereum)
alloy-primitives = { version = "1", default-features = false, features = ["k256"] }
alloy-consensus = "1"
alloy-rlp = "0.3"

# Zcash
zcash_protocol = "0.8"
zcash_primitives = "0.27"
zcash_keys = "0.13"
zcash_transparent = "0.7"
zcash_proofs = "0.27"
zcash_address = "0.11"
zcash_note_encryption = "0.4"
zcash_client_backend = { version = "0.22", default-features = false }
zcash_client_sqlite = "0.20"
orchard = "0.13"
zip32 = "0.2"
pczt = "0.6"
shardtree = "0.6"
incrementalmerkletree = "0.8"

# DB / storage
rusqlite = "0.37"
secrecy = "0.8"

# CLI
clap = "4"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Other
bytes = "1"
tempfile = "3"

# Workspace member path deps
paypunk-ipc = { path = "ipc" }
paypunk-types = { path = "types" }
keypunkd = { path = "keypunkd" }
paypunkd = { path = "paypunkd" }
paypunk-api = { path = "api" }
paypunk-chains-zcash = { path = "protocols/zcash" }
paypunk-chains-ethereum = { path = "protocols/ethereum" }

# Dev-only
async-trait = "0.1"
futures-util = "0.3"
prost = "0.14"
tonic = "0.14"

[patch.crates-io]
ratatui-widgets = { path = "vendor/ratatui-widgets" }
