[package]
name = "paypunk-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
qrcode = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paypunk-config = { path = "../config" }

[dev-dependencies]
tempfile = { workspace = true }
