[package]
name = "paypunk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paypunk"
path = "src/main.rs"

[dependencies]
paypunk-api.workspace = true
paypunk-types.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
clap = { workspace = true, features = ["derive"] }
zeroize.workspace = true
