[package]
name = "paypunkd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paypunkd"
path = "src/main.rs"

[dependencies]
paypunk-config.workspace = true
paypunk-ipc.workspace = true
paypunk-types.workspace = true
paypunk-chains-zcash.workspace = true
paypunk-chains-ethereum.workspace = true
keypunkd.workspace = true
zcash_protocol.workspace = true
tactix.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "signal"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true, features = ["alloc"] }
clap = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rusqlite = { workspace = true, features = ["bundled"] }
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
tempfile.workspace = true
