[package]
name = "paypunk-app"
version = "0.1.0"
description = "PayPunk Kitchen Sink — Tauri v2 + Konsta UI"
authors = ["you"]
edition = "2021"

[lib]
name = "paypunk_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
