[package]
name = "paypunk-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paypunk-types = { path = "../../types", default-features = false }
paypunk-chains-zcash = { path = "../../protocols/zcash", default-features = false }
zcash_protocol = { workspace = true, features = ["local-consensus"] }
bip39 = "2"
postcard = { version = "1", features = ["alloc"] }
blake2 = "0.10"
thiserror = "2"
tracing = "0.1"
hex = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "paypunk_signer_lib"
crate-type = ["lib", "cdylib", "staticlib"]
